--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
          */
         /*html, body {*/
             /*height: 100%;*/
-            /*background-color: #1985D0*/
+            /*background-color: #1985D0;*/
         /*}*/
 
         .colorBlue{
@@ -63,6 +63,9 @@
             background: url(resources/images/edit.png) center no-repeat;
         }
 
+        .psq{
+            background-color: #ffff00;
+        }
 
         #appLoadingIndicator {
             position: absolute;
@@ -78,7 +81,7 @@
         }
 
         #appLoadingIndicator > * {
-            background-color: #FFFFFF;
+            background-color: #4682b4;
             display: inline-block;
             height: 30px;
             -webkit-border-radius: 15px;
