--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html manifest="" lang="en-US">
 <head>
     <meta charset="UTF-8">
-    <title>FinDashBoardFinal</title>
+    <title>SenchaTouchExercise</title>
     <style type="text/css">
          /**
          * Example of an initial loading indicator.
@@ -11,8 +11,10 @@
          */
         /*html, body {*/
             /*height: 100%;*/
-            /*background-color: #1985D0;*/
+            /*background-color: #1985D0*/
         /*}*/
+
+
 
         .colorBlue{
             color: #ffff00 !important;
@@ -27,24 +29,28 @@
 
         .preview{
             color: #ffff00;
-            background: url("resources/icons/preview.ico");
+            background: url("__MACOSX/resources/icons/preview.ico");
             background-size: cover;
         }
 
         .mail{
             color: #ffff00;
-            background: url("resources/icons/mail.ico");
+            background: url("__MACOSX/resources/icons/mail.ico");
             background-size: cover;
         }
 
         .print{
             color: #ffff00;
-            background: url("resources/icons/printer.ico");
+            background: url("__MACOSX/resources/icons/printer.ico");
             background-size: cover;
         }
         
         .smallfont{
             font-size: small;
+        }
+
+        .psq{
+            background-color: #ffff00;
         }
 
         .normal_btn{
@@ -55,17 +61,14 @@
             border:none;
             font-family: Arial,Helvetica,sans-serif;
             /*background-image: url(resources/images/11.jpg)  !important;*/
-            background: url(resources/images/but_bg.png) center  !important;
+            background: url(__MACOSX/resources/images/but_bg.png) center  !important;
             color:#ffffff !important;
         }
 
         .button-icon{
-            background: url(resources/images/edit.png) center no-repeat;
+            background: url(__MACOSX/resources/images/edit.png) center no-repeat;
         }
 
-        .psq{
-            background-color: #ffff00;
-        }
 
         #appLoadingIndicator {
             position: absolute;
@@ -102,14 +105,19 @@
             }
         }
     </style>
+    <!-- Google Maps API -->
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
     <!-- The line below must be kept intact for Sencha Command to build your application -->
     <script id="microloader" type="text/javascript" src="sdk/microloader/development.js"></script>
+    <script type="text/javascript" src="__MACOSX/resources/js/chineseSort.js"></script>
+
 </head>
 <body>
     <div id="appLoadingIndicator">
         <div></div>
         <div></div>
         <div></div>
+
     </div>
 </body>
 </html>
